2006-10-31  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: do not attach the AS menu
	to its button because the behavior of menu transient to DOCK
	windows is undefined
	* configure.ac: 2.9.99.2

2006-10-31  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.99.1

2006-10-31  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-window.c:
	background_manager_load_error_cb (): Check for the error domain
	as well as the error code.

2006-10-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/home-applet-handler.c: Temporary make
	  home applet settings dialogs system-modal. Fixes: NB#37594

2006-10-30  Johan Bilien <johan.bilien@nokia.com>

	* configure.ac: 2.9.99

2006-10-30  Johan Bilien <johan.bilien@nokia.com>

	Applied fix to "Desktop doesn't remember the background picture,
	if preview used". Fixes: NB#45673
	* hildon-home/background-manager.c: Also react to _RESPONSE_DELETE
	from the cancel note
	* hildon-home/hidon-home-background-dialog.c: Added
	{discard,apply}_preview flags

2006-10-30  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-restore-background-always.sh:
	added backup restore script which removes the background
	cache always after a restore. Fixes: NB#45950

2006-10-25  Johan Bilien <johan.bilien@nokia.com>

	* hildon-home/hildon-home-applet.[ch]: Moved close button and
	  resize handle Pixbuf to be class variables. Fixes: NB#45325

2006-10-25  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c: Changed again the extension
	panel to DIALOG window and set transient for root window.

2006-10-25  Johan Bilien <johan.bilien@nokia.com>

	* hildon-navigator/hn-app-switcher.c: Also update the menu
	  after a change in the stack

2006-10-24  Moises Martinez <moises.martinzes@nokia.com>

	* hildon-status-bar/hildon-status-bar-main.c:
	- When removing a plugin re-arrange the panel from previous 
	plugin. Fixes: NB#43110
